<resources>
    <string name="app_name">intents</string>
    <string name="button_label_send">Send</string>
    <string name="second_text_header">Message Received</string>
    <string name="main_textinput_label">Enter Your Message Here</string>
    <string name="second_message">This is the message</string>
    <string name="second_editText">Enter Your Reply Here</string>
    <string name="second_button">Reply</string>
    <string name="main_reply">This is the reply!</string>
    <string name="main_header">Reply Received! </string>
</resources>
